--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "vercel": "^24.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
